<resources>
    <string name="app_name">JioJio</string>
    <string name="login">Login</string>
    <string name="login_email">Email address</string>
    <string name="login_password">Password</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>


    <string name="title_explore">Explore</string>
    <string name="title_myactivity">My Activity</string>
    <string name="title_addEvent">Add Event</string>
    <string name="title_chat">Chat</string>
    <string name="title_profile">Profile</string>

    <string name="title_friends">Friends</string>

    <string name="learning">Learning your interests...</string>


    <string name="title_user">User</string>
    <string name="task_title">Task:</string>
    <string name="deadline_title">Deadline:</string>
    <string name="start_date_title">Start date:</string>
    <string name="end_date_title">End date:</string>
    <string name="description_title">Description:</string>

    <string name="hint_display_name">Display Name</string>
    <string name="username_title">Username:</string>
    <string name="telegram_handle_title">Telegram handle</string>
    <string name="gender_title">Gender</string>
    <string name="birthday_title">Birthday</string>
    <string name="bio_title">Bio</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="add_friend">Add Friend</string>
    <string name="friend_request_sent">Friend request sent</string>
    <string name="telegram_handle_hint">Do not include the prefix \'@\'</string>

    <!-- for activity detail -->
    <string name="join">Join</string>
    <string name="inquiry">Inquiry</string>

    <string name="remove_friend">Remove friend</string>
    <string name="or">or sign in with</string>
    <string name="email_verification_text">Please check your email to verify your account.</string>
    <string name="google_login_register_username">Please enter a username.\nThe username will be visible to others and cannot be changed.</string>

</resources>