<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="250sp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@drawable/rounded_corner"
            android:hint="@string/login_email"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@drawable/rounded_corner"
            android:hint="@string/login_password"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/login_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/login_button"
            app:layout_constraintTop_toBottomOf="@id/login_email" />

        <TextView
            android:id="@+id/login_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/login_password"
            app:layout_constraintLeft_toLeftOf="@id/login_password"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/holo_red_light"
            tools:text="WRONG INPUT"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="50sp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@drawable/rounded_corner"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_password"
            android:layout_marginBottom="250sp"/>

        <TextView
            android:id="@+id/no_account_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:layout_marginBottom="75sp"
            android:layout_marginStart="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/sign_up_text"/>

        <TextView
            android:id="@+id/sign_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="@+id/no_account_view"
            app:layout_constraintLeft_toRightOf="@id/no_account_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/no_account_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
