<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="sViewModel"
            type="com.example.producity.SharedViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profile.EditProfileFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:liftOnScroll="false">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/top_app_bar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/holo_purple"
                app:layout_scrollFlags="noScroll"
                app:menu="@menu/edit_profile_top_app_bar"
                app:title="Edit Profile" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/edit_profile_pic"
                    android:layout_width="@dimen/profile_pic_height"
                    android:layout_height="@dimen/profile_pic_height"
                    android:layout_margin="@dimen/profile_margin_start"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearance="@style/ShapeAppearance.App.CircleImageView"
                    app:srcCompat="@drawable/ic_baseline_person_24" />

                <EditText
                    android:id="@+id/edit_display_name"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/profile_margin_start_pic_text"
                    android:hint="@string/hint_display_name"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    app:layout_constraintStart_toEndOf="@id/edit_profile_pic"
                    app:layout_constraintTop_toTopOf="@id/edit_profile_pic"
                    tools:text="Lawrence Wong Xiao Ming" />

                <TextView
                    android:id="@+id/username_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/profile_margin_start_pic_text"
                    android:layout_marginTop="@dimen/profile_margin_top_username_displayname"
                    android:text="@string/username_title"
                    android:textColor="@color/grey"
                    android:textSize="13sp"
                    app:layout_constraintStart_toEndOf="@id/edit_profile_pic"
                    app:layout_constraintTop_toBottomOf="@id/edit_display_name" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="@dimen/profile_margin_top_username_displayname"
                    android:textColor="@color/grey"
                    android:textSize="13sp"
                    app:layout_constraintStart_toEndOf="@id/username_title"
                    app:layout_constraintTop_toBottomOf="@id/edit_display_name"
                    tools:text="username12345" />


                <TextView
                    android:id="@+id/telegram_handle_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/profile_margin_start"
                    android:layout_marginTop="@dimen/profile_margin_top"
                    android:text="@string/telegram_handle_title"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/profile_title_text_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edit_profile_pic" />

                <EditText
                    android:id="@+id/edit_telegram_handle"
                    android:layout_width="@dimen/edit_profile_edittext_width"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/profile_margin_start"
                    android:hint="@string/telegram_handle_hint"
                    android:textColor="@color/black"
                    android:textSize="@dimen/profile_content_text_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/telegram_handle_title" />


                <TextView
                    android:id="@+id/gender_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/profile_margin_start"
                    android:layout_marginTop="@dimen/profile_margin_top"
                    android:text="@string/gender_title"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/profile_title_text_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edit_telegram_handle" />

                <RadioGroup
                    android:id="@+id/gender_options"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/profile_margin_start"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/gender_title">

                    <RadioButton
                        android:id="@+id/male_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/profile_margin_start"
                        android:checked="@{sViewModel.currentUser.gender.equals(@string/male)}"
                        android:text="@string/male"
                        android:textSize="@dimen/profile_content_text_size" />

                    <RadioButton
                        android:id="@+id/female_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{sViewModel.currentUser.gender.equals(@string/female)}"
                        android:text="@string/female"
                        android:textSize="@dimen/profile_content_text_size" />

                </RadioGroup>


                <TextView
                    android:id="@+id/birthday_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/profile_margin_start"
                    android:layout_marginTop="@dimen/profile_margin_top"
                    android:text="@string/birthday_title"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/profile_title_text_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/gender_options" />

                <ImageButton
                    android:id="@+id/date_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/profile_margin_start"
                    android:src="@drawable/ic_calendar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/birthday_title" />

                <TextView
                    android:id="@+id/birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/profile_content_text_size"
                    app:layout_constraintBottom_toBottomOf="@id/date_picker"
                    app:layout_constraintStart_toEndOf="@id/date_picker"
                    app:layout_constraintTop_toTopOf="@id/date_picker"
                    tools:text="2000-01-01" />


                <TextView
                    android:id="@+id/bio_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/profile_margin_start"
                    android:layout_marginTop="@dimen/profile_margin_top"
                    android:text="@string/bio_title"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/profile_title_text_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/birthday" />

                <EditText
                    android:id="@+id/edit_bio"
                    android:layout_width="@dimen/edit_profile_edittext_width"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/profile_margin_start"
                    android:textColor="@color/black"
                    android:textSize="@dimen/profile_content_text_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bio_title"
                    tools:text="The user's bio..." />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>